--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -31,13 +31,13 @@
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 android:background="#BD0B1C"
-                android:src="@drawable/ic_launcher_foreground"
+                android:src="@drawable/ic_android_black"
                 app:layout_collapseMode="parallax" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/details_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="?actionBarSize"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
@@ -54,7 +54,7 @@
         android:backgroundTint="#009688"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|right"
-        app:srcCompat="@drawable/ic_launcher_foreground"
+        app:srcCompat="@drawable/ic_android_black"
         android:tint="@android:color/white"/>
 
     <androidx.core.widget.NestedScrollView
