--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -28,11 +28,12 @@
                 android:id="@+id/details_poster"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="#BD0B1C"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                android:background="#BD0B1C"
                 android:src="@drawable/ic_android_black"
-                app:layout_collapseMode="parallax" />
+                app:layout_collapseMode="parallax"
+                tools:ignore="ImageContrastCheck" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/details_toolbar"
@@ -52,10 +53,23 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:backgroundTint="#009688"
+        android:tint="@android:color/white"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|right"
-        app:srcCompat="@drawable/ic_android_black"
-        android:tint="@android:color/white"/>
+        app:srcCompat="@drawable/ic_android_black" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/details_fab_favorites"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:backgroundTint="@color/design_default_color_primary_dark"
+
+        android:tint="@android:color/white"
+        app:borderWidth="0dp"
+        app:layout_anchor="@id/app_bar"
+        app:layout_anchorGravity="left|bottom"
+        app:srcCompat="@drawable/border_favorite" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
