--- a/app/src/main/res/layout/merge_home_screen_content.xml
+++ b/app/src/main/res/layout/merge_home_screen_content.xml
@@ -16,8 +16,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/main_recycler"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         tools:listitem="@layout/film_item"
         android:layout_margin="8dp"
         app:layout_constraintTop_toBottomOf="@+id/search_view"
