--- a/app/src/main/res/layout/fragment_selections.xml
+++ b/app/src/main/res/layout/fragment_selections.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SelectionsFragment"
+    tools:context=".view.fragments.SelectionsFragment"
     android:id="@+id/selections_fragment_root"
     android:background="@drawable/background_selections"
     android:visibility="invisible"
