--- a/app/src/main/res/layout/fragment_watch_later.xml
+++ b/app/src/main/res/layout/fragment_watch_later.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WatchLaterFragment"
+    tools:context=".view.fragments.WatchLaterFragment"
     android:id="@+id/watch_later_fragment_root"
     android:background="@drawable/background_watch_later"
     android:visibility="invisible"
