--- a/app/src/main/res/menu/toolbar_navigation.xml
+++ b/app/src/main/res/menu/toolbar_navigation.xml
@@ -20,4 +20,9 @@
         android:icon="@drawable/twotone_subscriptions_24"
         android:title="@string/b_compilation"
         app:showAsAction="withText"/>
+    <item
+        android:id="@+id/settings"
+        android:icon="@drawable/outline_settings"
+        android:title="@string/menu_settings_title_text"
+        app:showAsAction="withText"/>
 </menu>
